--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ langchain-google-genai = "*"
 python-dotenv = "*"
 beautifulsoup4 = "*"
 pypdf = "*"
+langchain-community = "*"
 
 [dev-packages]
 
