--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ OPENAI_API_KEY=your_openapi_key_here
 
 # Google Gemini API Key
 GOOGLE_API_KEY=your_google_gemini_api_key_here
+
+OPEN_AI_MODEL=text-embedding-3-small
+PGVECTOR_URL=postgresql+psycopg://postgres:postgres@host.docker.internal:5432/rag
+PGVECTOR_COLLECTION=gpt5_collection
